Eclipse Java interface confusion