@@ -49,7 +49,7 @@ public class AasRegistryUtils {
         if (null != desc) {
             List<Endpoint> eps = desc.getEndpoints();
             if (null != eps && !eps.isEmpty()) {
-                result = eps.getFirst();
+                result = eps.get(0);
             }
         }
         return result;
